--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en" class="h-full">
  <head>
+  <title>Class 12 Physics Chemistry Formula Sheet | Free PDF</title>
+
+<meta name="description" content="Class 12 physics chemistry  formula sheet for board exams. All formulas chapter wise, free and easy to understand.">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Class 12 Formula Sheet</title>
