--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
  <head>
   <title>Class 12 Physics Chemistry Formula Sheet | Free PDF</title>
 
-<meta name="description" content="Class 12 physics chemistry  formula sheet for board exams. All formulas chapter wise, free and easy to understand.">
+<meta name="description" content="Class 12 physics chemistry formula sheet for board exams. All formulas chapter wise, free and easy to understand.">
+<meta name="keywords" content="12th physics chemistry formula sheet, class 12 physics chemistry formulas, ncert class 12 physics chemistry, board exam physics chemistry  formulas">
 
+<meta name="author" content="Rajveer Singh">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Class 12 Formula Sheet</title>
